--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -77,6 +77,7 @@ html, body {
   color: #fff;
   background-color: darkgoldenrod;
   padding: 10px;
+  margin-right: -10%;
 }
 
 .app-info-btn {
@@ -130,7 +131,7 @@ html, body {
 }
 
 .popup > input {
-  width: 100%;
+  width: 95%;
   height: 40px;
   font-size: 1rem;
 }
@@ -144,11 +145,11 @@ html, body {
 }
 
 .budget-button {
-  width: 100%;
+  width: 95%;
   border-radius: 8px;
   margin-top: 1em;
   text-align: left;
-  padding: 15px;
+  padding: 20px;
   background: whitesmoke;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -157,13 +158,46 @@ html, body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 10px;
 }
 
 .home-budget-name {
-  font-size: 1.3rem;
+  font-size: 165%;
   font-weight: bolder;
   color: #35374B;
+  margin: 5px;
+}
+
+.home-salary-label {
+  font-size: 115%;
+  font-weight: bold;
+}
+
+.home-salary-amt {
+  font-size: 110%;
+}
+
+.home-expense-label {
+  font-size: 115%;
+  font-weight: bold;
+
+}
+
+.home-expense-amt {
+  font-size: 110%;
+  color: red;
+
+}
+
+.home-money-left-label {
+  font-size: 115%;
+  font-weight: bold;
+
+}
+
+.home-money-left-amt {
+  font-size: 110%;
+  color: green;
+
 }
 
 /* Details Page */
@@ -180,12 +214,14 @@ html, body {
   font-size: 1.5rem;
   font-weight: bold;
   color: #fff;
+  padding-right: 4%;
 }
 
 .home-btn, .new-income-btn, .new-expense-btn {
   background-color: goldenrod;
   padding: 10px 20px;
   font-size: .75rem;
+  border-radius: 10px;
 }
 
 .new-expense-btn {
@@ -211,12 +247,28 @@ html, body {
   margin-bottom: 20px;
 }
 
-.money-left-area, .total-income-area {
+.money-left-area {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  text-align: right;
   width: 100%;
-  margin-bottom: 10px;
+  border: orangered solid 2px;
+}
+
+.total-income-area {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  width: 100%;
+  border: orangered solid 2px;
+}
+
+.total-expense-area {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  width: 100%;
+  border: orangered solid 2px;
 }
 
 .money-left-area > h2 {
@@ -224,19 +276,28 @@ html, body {
   font-weight: bold;
 }
 
+.total-income-area > h2 {
+  color: green;
+  font-weight: bold;
+}
+
+.total-expense-area > h2 {
+  color: red;
+  font-weight: bold;
+}
+
 /* Tabs */
 .tabs {
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
 }
 
 .tab-list {
   display: flex;
-  justify-content: space-around;
   list-style: none;
   padding: 0;
   margin: 0;
+  margin-left: 3.5%;
 }
 
 .tab-link {
@@ -258,6 +319,8 @@ html, body {
   border-top: 1px solid #ddd;
   background-color: #f9f9f9;
   border-radius: 8px;
+  width: 85%;
+  margin-left: 3.5%;
 }
 
 /* Progress Bar */
