--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,11 +2,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  font-family: "Noto Sans Display", sans-serif;
-  background-color: #f5f5f5;
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
+  font-family: "Poppins", serif;
   overflow-x: hidden; /* Prevent horizontal scroll */
 }
 
@@ -17,9 +13,6 @@ html, body {
   width: 100%;
   height: 100vh; /* Use full viewport height */
   background-color: #EEEDEB;
-  box-sizing: border-box;
-  font-family: "Noto Sans Display", sans-serif;
-
 }
 
 /* Splash Screen */
@@ -79,7 +72,7 @@ html, body {
   color: #fff;
   background-color: darkgoldenrod;
   padding: 10px;
-  margin-right: -10%;
+  margin-right: -25%;
 }
 
 .app-info-btn {
@@ -252,7 +245,9 @@ html, body {
 .money-left-area {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  margin-left: 5em;
+  text-align: right;
+  margin-top: 25px;
 }
 
 .top-income-expense {
@@ -264,6 +259,7 @@ html, body {
   flex-direction: column;
   text-align: left;
   width: 100%;
+  margin-left: 1em;
 }
 
 .total-expense-area {
@@ -276,16 +272,42 @@ html, body {
 .money-left-area > h2 {
   color: orange;
   font-weight: bold;
+  font-style: normal;
+  font-size: 20px;
+}
+
+.money-left-area > p {
+  font-style: normal;
+  font-size: 20px;
+  margin: 0;
 }
 
 .total-income-area > h2 {
   color: green;
   font-weight: bold;
+  font-style: normal;
+  font-size: 20px;
+}
+
+.total-income-area > p {
+  font-style: normal;
+  font-size: 20px;
+  margin: 0;
 }
 
 .total-expense-area > h2 {
   color: red;
   font-weight: bold;
+  font-style: normal;
+  font-size: 20px;
+  text-align: right;
+}
+
+.total-expense-area > p {
+  font-style: normal;
+  font-size: 20px;
+  margin: 0;
+  text-align: right;
 }
 
 /* Tabs */
@@ -323,6 +345,13 @@ html, body {
   border-radius: 8px;
   width: 85%;
   margin-left: 3.5%;
+}
+
+.tab-content > div > ul > li {
+  list-style-type: none;
+  text-decoration: none;
+  margin-left: -2.5em;
+  margin-bottom: 1em;
 }
 
 /* Progress Bar */
